Upload modified files for version 2